--- a/templates/core/terraform/azure-monitor/app_insights.json
+++ b/templates/core/terraform/azure-monitor/app_insights.json
@@ -62,6 +62,10 @@
     "connectionString": {
       "value": "[reference(resourceId('microsoft.insights/components', parameters('app_insights_name')), '2020-02-02').ConnectionString]",
       "type": "String"
+    },
+    "resourceId": {
+      "value": "[resourceId('microsoft.insights/components', parameters('app_insights_name'))]",
+      "type": "String"
     }
   }
 }
