add file size limit check to Airlock submit requests

--- a/api_app/.env.sample
+++ b/api_app/.env.sample
@@ -68,3 +68,4 @@ AZURE_CLIENT_SECRET=__CHANGE_ME__
 # Airlock configuration
 # ------------------------------------------
 AIRLOCK_SAS_TOKEN_EXPIRY_PERIOD_IN_HOURS=__CHANGE_ME__
+ENABLE_AIRLOCK_MALWARE_SCANNING=__CHANGE_ME__
