--- a/.github/workflows/deploy_tre.yml
+++ b/.github/workflows/deploy_tre.yml
@@ -14,7 +14,7 @@ on:  # yamllint disable-line rule:truthy
       environment:
         description: The environment to run this workflow in
         type: environment
-        default: CICD
+        default: GOV
         required: true
 
 # This will prevent multiple runs of this entire workflow.
@@ -31,7 +31,7 @@ jobs:
       e2eTestsCustomSelector: >-
         ${{ (github.event_name == 'push' && 'extended or extended_aad')
         || 'extended or extended_aad or shared_services or airlock' }}
-      environmentName: ${{ github.event.inputs.environment || 'CICD' }}
+      environmentName: ${{ github.event.inputs.environment || 'GOV' }}
       E2E_TESTS_NUMBER_PROCESSES: 1
     secrets:
       AAD_TENANT_ID: ${{ secrets.AAD_TENANT_ID }}
