--- a/.github/workflows/pr_comment_bot.yml
+++ b/.github/workflows/pr_comment_bot.yml
@@ -68,7 +68,7 @@ jobs:
     needs: [pr_comment]
     if: ${{ needs.pr_comment.outputs.command == 'test-destroy-env' }}
     runs-on: ubuntu-latest
-    environment: CICD
+    environment: GOV
     name: Destroy PR env
     steps:
       # Ensure we have the script files
@@ -101,7 +101,7 @@ jobs:
     needs: [pr_comment]
     if: ${{ needs.pr_comment.outputs.command == 'test-destroy-env' && needs.pr_comment.outputs.branchRefId != '' }}
     runs-on: ubuntu-latest
-    environment: CICD
+    environment: GOV
     name: Destroy branch env
     steps:
       # Ensure we have the script files
@@ -149,7 +149,7 @@ jobs:
         (needs.pr_comment.outputs.command == 'run-tests-extended-aad' && 'extended_aad') ||
         (needs.pr_comment.outputs.command == 'run-tests-shared-services' && 'shared_services') ||
         (needs.pr_comment.outputs.command == 'run-tests' && '') }}
-      environmentName: CICD
+      environmentName: GOV
       E2E_TESTS_NUMBER_PROCESSES: 1
     secrets:
       AAD_TENANT_ID: ${{ secrets.AAD_TENANT_ID }}
